CHANGES.txt - 2.0.1 - 2014-10-20
--------------------------------

CHANGES IN CUPS V2.0.1

	- Security: SSLv3 is now disabled by default to protect against the
	  POODLE attack (STR #4476)
	- Printer sharing did not work when systemd was being used (STR #4497)
	- cupsGetPPD* would return a symlink to the PPD in /etc/cups/ppd even if
	  it was not readable by the user (STR #4500)
	- The web interface now protects against frame "click-jacking" attacks
	  (STR #4492)
	- Fixed a crash in ippAttributeString (<rdar://problem/17903871>)
	- RPMs did not build (STR #4490)


CHANGES IN CUPS V2.0.0

	- The scheduler did not preserve listener sockets from launchd or
	  systemd after a restart (<rdar://problem/18112848>)
	- Added some USB quirk rules for the libusb-based USB backend
	  (STR #4482)
	- Spanish localization update (STR #4487)
	- Updated documentation for 2.0.0 release.


CHANGES IN CUPS V2.0rc1

	- Documentation updates (STR #4464)
	- The scheduler now monitors the AC power status on OS X, allowing for
	  "sleep printing" when sharing printers (<rdar://problem/17325852>)
	- The scheduler incorrectly called launch_activate_socket multiple times
	  on OS X (<rdar://problem/17523218>)
	- The ippserver test program now passes the IPP Everywhere self-
	  certification tests (STR #4101)
	- Relaxed the new OS X filter sandbox slightly (STR #4471,
	  <rdar://problem/17483959>)
	- Dropped the old Epson Stylus Color/Photo sample drivers since they
	  don't work with any current printers and there are free alternatives
	  that produce much better output (<rdar://problem/18036889>)
	- Log and configuration files that are not world-readable are again
	  accessible via the web interface (STR #4461)
	- PPD files are now created using the permissions specified by the
	  ConfigFilePerm directive.
	- Fixed RPM build issues (STR #4459)
	- Fixed the spinner image and restart page when reconfiguring the
	  scheduler through the web interface (STR #4475)


CHANGES IN CUPS V2.0b1
