@@ -81,6 +81,7 @@ AC_OUTPUT(Makedefs
 	  scheduler/cups.sh
 	  scheduler/cups.xml
 	  scheduler/org.cups.cups-lpd.plist
+	  scheduler/org.cups.cups-lpdAT.service
 	  scheduler/org.cups.cupsd.path
 	  scheduler/org.cups.cupsd.service
 	  scheduler/org.cups.cupsd.socket
