@@ -1,4 +1,4 @@
-CHANGES.txt - 2.0.1 - 2014-10-20
+CHANGES.txt - 2.0.1 - 2014-10-21
 --------------------------------
 
 CHANGES IN CUPS V2.0.1
@@ -11,6 +11,7 @@ CHANGES IN CUPS V2.0.1
 	- The web interface now protects against frame "click-jacking" attacks
 	  (STR #4492)
 	- Fixed a crash in ippAttributeString (<rdar://problem/17903871>)
+	- Added systemd support for cups-lpd (STR #4493)
 	- RPMs did not build (STR #4490)
 
 
